# xhs-feishu-sync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_server.py  xhs-feishu-server-debug.spec  xhs-feishu-server.spec  删除.bat  删除.sh  每日采集.bat  每日采集.sh
.github/workflows/: ci.yml
config/: accounts.yaml  bitable_schema.yaml  settings.yaml
data/csv_imports/test_brand/: 2026-07-10_export.csv  笔记列表明细表.xlsx
devlog/: .template.md  2026-07-10.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-17.md  2026-07-20.md
docs/: Today_VibecodingReview.md  api-reference.md  architecture.md  design-standards.md  implementation-plan.md  owners_manual.md  requirements.md
extension/: manifest.json
extension-keys/: private.pem  public.der  public.pem
extension/background/: service-worker.js
extension/content/: xhs-interceptor.js
extension/popup/: popup.css  popup.html  popup.js
scripts/: daily_run.bat  init_db.py  install.bat  manual_run.py  package.bat  setup.bat  setup.sh  setup_bitable.py  start_chrome.bat  start_chrome.sh  start_server.bat  verify_scheduler.py  verify_trend_competitor.py
src/api/: __init__.py  server.py
src/cli/: main.py
src/collectors/: base.py  csv_import.py  factory.py  models.py  xhs_api.py  xhs_browser.py
src/core/: config.py  exceptions.py  logging.py  pipeline.py
src/loaders/: account_manager.py  bitable_client.py  bitable_schema.py  sync_engine.py
src/notifiers/: feishu_bot.py
src/scheduler/: jobs.py
src/storage/: models.py  sqlite.py
src/transformers/: competitor.py  normalizer.py  trend_calculator.py
tests/test_storage/: test_sqlite.py
tests/test_transformers/: test_competitor.py  test_normalizer.py  test_trend_calculator.py
