[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaohongshu-feishu-sync"
version = "0.1.0"
description = "自动采集小红书账号数据并同步到飞书多维表格"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "LingoAce Team"}
]
keywords = ["xiaohongshu", "feishu", "bitable", "data-sync", "automation"]

dependencies = [
    "playwright>=1.48",
    "lark-oapi>=1.4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "click>=8.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5",
    "ruff>=0.5",
    "mypy>=1.0",
]

[project.scripts]
xhs-feishu = "src.cli.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
